[package]
name = "bevy_mod_sdl3"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "0.19.0"
bevy_derive = "0.19.0"
bevy_ecs = "0.19.0"
bevy_input = "0.19.0"
bevy_log = "0.19.0"
bevy_math = "0.19.0"
bevy_window = "0.19.0"
sdl3 = { version = "0.18.4", features = ["raw-window-handle"] }
raw-window-handle = "0.6.2"
